feat: 修改日志配置，不存留日志文件